Fix unintended CSS bleeding into header bar

--- a/Custom Dashboards/web/mdAdmin/styles/main.css
+++ b/Custom Dashboards/web/mdAdmin/styles/main.css
@@ -36,7 +36,7 @@ body {
   margin-bottom: 10px;
 }
 
-.md-toolbar-tools div:not(.desktop) > .md-button {
+md-card .md-toolbar-tools div:not(.desktop) > .md-button {
     height: 25px;
 	min-height: 25px;
 	max-height: 25px;
